# bacc-ui-wasm

./: .gitignore  305.bootstrap.js  468.bootstrap.js  827.bootstrap.js  88.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
.github/workflows/: ci.yml  deploy.yml  publish.yml
src/: lib.rs  svg_playing_cards.rs
www/: api.ts  bootstrap.js  index.html  index.js  main.ts  package-lock.json  package.json  render.ts  scoreboard.ts  tsconfig.json  types.ts  wasm.ts  webpack.config.js
www/bacc/: api.ts  kev.ts  round.ts  scoreboard.ts  shoe.ts
