[package]
name = "bacc-ui-wasm"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bacc-core-rs = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
rstest = "0.25"

[profile.release]
opt-level = "s"
